--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,37 @@ CLICKBANK_CLERK_KEY=your_clickbank_clerk_key
 # General
 ENVIRONMENT=development
 LOG_LEVEL=info
+
+# -----------------------
+# OpenAI models (optional)
+# -----------------------
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+OPENAI_REPLY_MODEL=gpt-4o-mini
+
+# -----------------------
+# Pinecone (required for RAG)
+# -----------------------
+PINECONE_API_KEY=replace_with_pinecone_key
+PINECONE_ENV=us-west1-gcp
+PINECONE_INDEX=hardchews-support-index
+PINECONE_DIM=1536
+PINECONE_METRIC=cosine
+
+# -----------------------
+# Scheduler & Caching
+# -----------------------
+SCRAPING_INTERVAL_HOURS=6
+SCRAPING_CACHE_TTL_HOURS=24
+CACHE_PATH=app/cache/scraped_data.json
+
+# -----------------------
+# Optional: External backends
+# -----------------------
+DATABASE_URL=postgresql://user:pass@host:5432/dbname
+REDIS_URL=redis://:password@localhost:6379/0
+
+# -----------------------
+# Security / Deployment (optional)
+# -----------------------
+SECRET_KEY=replace_with_strong_random
+ADMIN_EMAIL=ops@example.com
